--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "git"]
 	path = git
-	url = /home/robtaylor/projects/topaz/wizbit/wizbitng/git/.git
+	url = git://git.codethink.co.uk/git/git
