Use -pthread when linking

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -3,5 +3,5 @@ noinst_PROGRAMS = test-storage
 test_storage_SOURCES = \
 	test-storage.c
 
-test_storage_LDADD = $(top_builddir)/wizbit/libwizbit.la @GIT_LIBS@ @UUID_LIBS@
+test_storage_LDADD = $(top_builddir)/wizbit/libwizbit.la @GIT_LIBS@ @UUID_LIBS@ -lpthread
 test_storage_CFLAGS = @UUID_CFLAGS@ @GIT_CFLAGS@
