--- a/configure.ac
+++ b/configure.ac
@@ -7,7 +7,10 @@ AM_INIT_AUTOMAKE([1.10])
 AC_PROG_LIBTOOL
 AM_PROG_CC_C_O
 
-dnl PKG_CHECK_MODULES(GLIB, gobject-2.0 >= 2.6)
+PKG_CHECK_MODULES(GLIB, glib-2.0)
+AC_SUBST(GLIB_CFLAGS)
+AC_SUBST(GLIB_LIBS)
+
 PKG_CHECK_MODULES(UUID, uuid >= 1.40)
 
 AC_ARG_WITH(openssl,
