--- a/configure.ac
+++ b/configure.ac
@@ -7,6 +7,8 @@ AM_INIT_AUTOMAKE([1.10])
 AC_PROG_LIBTOOL
 AM_PROG_CC_C_O
 
+CFLAGS="$CFLAGS -Werror -Wall"
+
 PKG_CHECK_MODULES(GLIB, glib-2.0)
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
