Remove the sub module. Make sure you install libgitcore-dev :)

--- a/wizbit/Makefile.am
+++ b/wizbit/Makefile.am
@@ -1,4 +1,4 @@
-noinst_LTLIBRARIES=libwizbit.la
+lib_LTLIBRARIES=libwizbit.la
 
 INCLUDES= \
 	$(GLIB_CFLAGS) \
@@ -10,8 +10,5 @@ libwizbit_la_SOURCES = \
 	vref.c \
 	vref.h
 
-#evil hack to get around git's internal headers being pants
-
-SHA1_HEADER = $(shell sh -c 'cd $(top_builddir)/git && make -q -p | grep "SHA1_HEADER =" | cut -d " " -f 3')
 libwizbit_la_LIBADD = @UUID_LIBS@ @LIBGITCORE_LIBS@
-libwizbit_la_CFLAGS = @UUID_CFLAGS@ @LIBGITCORE_CFLAGS@ -DSHA1_HEADER="$(SHA1_HEADER)"
+libwizbit_la_CFLAGS = @UUID_CFLAGS@ @LIBGITCORE_CFLAGS@
