--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,10 @@ AM_PROG_CC_C_O
 
 CFLAGS="$CFLAGS -Werror -Wall"
 
+PKG_CHECK_MODULES(LIBGITCORE, libgitcore)
+AC_SUBST(LIBGITCORE_CFLAGS)
+AC_SUBST(LIBGITCORE_LIBS)
+
 PKG_CHECK_MODULES(GLIB, glib-2.0)
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
@@ -26,12 +30,6 @@ else
   PKG_CHECK_MODULES(SSL, libssl)
 fi
 
-LIBGITCORE_LIBS="$SSL_LIBS \$(top_builddir)/git/libgitcore/.libs/libgitcore.a"
-LIBGITCORE_CFLAGS='-I$(top_srcdir)/git'
-AC_SUBST(LIBGITCORE_LIBS)
-AC_SUBST(LIBGITCORE_CFLAGS)
-
-AC_CONFIG_SUBDIRS([git])
 AC_CONFIG_FILES([
 Makefile
 wizbit/Makefile
