--- a/libwizbit/Makefile.am
+++ b/libwizbit/Makefile.am
@@ -8,7 +8,7 @@ INCLUDES= \
 BUILT_SOURCES = libwizbit.vala.stamp
 
 libwizbit_la_VALASOURCES = \
-	store.vala \
+	graph.vala \
 	object.vala \
 	version.vala \
 	reader.vala \
