Need a store object to represent a collection of wizbit objects

--- a/libwizbit/Makefile.am
+++ b/libwizbit/Makefile.am
@@ -9,6 +9,7 @@ BUILT_SOURCES = libwizbit.vala.stamp
 
 libwizbit_la_VALASOURCES = \
 	graph.vala \
+	store.vala \
 	object.vala \
 	version.vala \
 	reader.vala \
