Added uuid generation code

--- a/libwizbit/Makefile.am
+++ b/libwizbit/Makefile.am
@@ -14,6 +14,8 @@ libwizbit_la_VALASOURCES = \
 	version.vala \
 	reader.vala \
 	writer.vala \
+	uuid.vapi \
+	utils.vala \
 	$(NULL)
 
 libwizbit_la_SOURCES = \
