Redistribute the glib-2.0 vapi. This one fixes GQueue. Allows building wizbit with released vala versions.

--- a/Makefile.am
+++ b/Makefile.am
@@ -30,7 +30,7 @@ wizbit_SOURCES = \
 	$(NULL)
 
 src/wizbit.vala.stamp: $(wizbit_VALASOURCES)
-	$(VALAC) -C --basedir $(top_srcdir) $^
+	$(VALAC) -C --vapidir=$(top_srcdir)/vapi --basedir $(top_srcdir) $^
 	touch $@
 
 wizbit_LDADD = \
