--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,11 @@
 AC_INIT([wizbit], [0.1.0], [john.carr@unrouted.co.uk], [wizbit])
 AC_CONFIG_SRCDIR([Makefile.am])
 AC_CONFIG_HEADERS(config.h)
+
+m4_pattern_allow([^AC_WIZ_])
+AC_CONFIG_MACRO_DIR([m4])
+AC_SUBST(ACLOCAL_AMFLAGS, "$ACLOCAL_FLAGS -I m4")
+
 AM_INIT_AUTOMAKE([dist-bzip2])
 AM_MAINTAINER_MODE
 
@@ -29,27 +34,8 @@ PKG_CHECK_MODULES(WIZBIT, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIR
 AC_SUBST(WIZBIT_CFLAGS)
 AC_SUBST(WIZBIT_LIBS)
 
-AM_PATH_PYTHON([2.4])
+AC_WIZ_PYTHON
 
-changequote(<<, >>)
-PY_VER=`$PYTHON -c 'import distutils.sysconfig; print distutils.sysconfig.get_config_vars("VERSION")[0];'`
-PY_LIB=`$PYTHON -c 'import distutils.sysconfig; print distutils.sysconfig.get_python_lib(standard_lib=1);'`
-PY_INC=`$PYTHON -c 'import distutils.sysconfig; print distutils.sysconfig.get_config_vars("INCLUDEPY")[0];'`
-PY_PREFIX=`$PYTHON -c 'import sys; print sys.prefix'`
-PY_EXEC_PREFIX=`$PYTHON -c 'import sys; print sys.exec_prefix'`
-changequote([, ])
-
-if test -f $PY_INC/Python.h; then
-    PYTHON_LIBS="-L$PY_LIB/config -lpython$PY_VER -lpthread -lutil"
-    PYTHON_CFLAGS="-I$PY_INC"
-else
-    AC_MSG_ERROR([Can't find Python.h])
-fi
-AC_SUBST(PYTHON_CFLAGS)
-AC_SUBST(PYTHON_LIBS)
-
-PKG_CHECK_MODULES(PYGOBJECT, pygobject-2.0 >= 2.8.0)
-_
 AC_CONFIG_FILES([Makefile
 	libwizbit/Makefile
 	tests/Makefile
