Update .gitignore. git status is almost usable now.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,31 @@
+aclocal.m4
+autom4te.cache/*
+compile
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+missing
+mkinstalldirs
+py-compile
+stamp-h1
+Makefile.in
+Makefile
+.deps
+.dirstamp
+.libs
+intltool-*
+libwizbit/*.[ch]
+tests/*.[ch]
+src/*.[ch]
+config.*
+*.stamp
+*.o
+*.la
+*.lo
 *.pyc
 *.pyo
 .*.sw[pon]
 *.bzr
+*~
