We really want headers

--- a/libwizbit/Makefile.am
+++ b/libwizbit/Makefile.am
@@ -26,16 +26,17 @@ libwizbit_la_SOURCES = \
 	$(libwizbit_la_VALASOURCES:.vala=.h) \
 	$(NULL)
 
-libwizbit_la_HEADERS = \
-	$(libwizbit_la_VAlASOURCES:.vala=.h) \
-	$(NULL)
-
 libwizbit.vala.stamp: $(libwizbit_la_VALASOURCES)
 	$(VALAC) -C --library libwizbit --vapidir=$(top_srcdir)/vapi --basedir $(top_srcdir) --pkg glib-2.0 --pkg gio-2.0 --pkg gio-unix-2.0 $^
 	touch $@
 
 libwizbit_la_CFLAGS=@WIZBIT_CFLAGS@
 libwizbit_la_LIBS=@WIZBIT_LIBS@
+
+wizbitincludedir = $(includedir)/wizbit-1.0/
+wizbitinclude_HEADERS = \
+	$(libwizbit_la_VALASOURCES:.vala=.h) \
+	$(NULL)
 
 EXTRA_DIST = \
 	$(libwizbit_la_VALASOURCES) \
