--- a/libwizbit/Makefile.am
+++ b/libwizbit/Makefile.am
@@ -27,7 +27,7 @@ libwizbit_la_SOURCES = \
 	$(NULL)
 
 libwizbit.vala.stamp: $(libwizbit_la_VALASOURCES)
-	$(VALAC) -C --library wizbit --vapidir=$(top_srcdir)/vapi --basedir $(top_srcdir) --pkg glib-2.0 --pkg gio-2.0 --pkg gio-unix-2.0 $^
+	$(VALAC) -C --vapidir=$(top_srcdir)/vapi --basedir $(top_srcdir) --pkg glib-2.0 --pkg gio-2.0 --pkg gio-unix-2.0 --library wizbit $^
 	touch $@
 
 libwizbit_la_CFLAGS=@WIZBIT_CFLAGS@
