--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,13 +4,14 @@ INCLUDES = \
 	-I$(top_srcdir) \
 	-DTESTDATADIR=\"$(srcdir)/data/\"
 
-TEST_PROGS = test-everything test-sync
+TEST_PROGS = test-everything test-sync test-commit-store
 
 noinst_PROGRAMS = $(TEST_PROGS)
 
 BUILT_SOURCES = \
 	test_everything.vala.stamp			\
 	test-sync.vala.stamp				\
+	test-commit-store.vala.stamp			\
 	$(NULL)
 
 test_everything_VALASOURCES = \
@@ -47,8 +48,26 @@ test-sync.vala.stamp: $(test_sync_VALASOURCES)
 test_sync_CFLAGS=@WIZBIT_CFLAGS@
 test_sync_LDADD=../wizbit/libwizbit.la
 
+test_commit_store_VALASOURCES = \
+	$(top_builddir)/wizbit/wizbit.vapi		\
+	test-commit-store.vala				\
+	$(NULL)
+
+test_commit_store_SOURCES = \
+	$(test_commit_store_VALASOURCES:.vala=.c)	\
+	$(test_commit_store_VALASOURCES:.vala=.h)	\
+	$(NULL)
+
+test-commit-store.vala.stamp:	$(test_commit_store_VALASOURCES)
+	$(VALAC) -C --vapidir=$(top_srcdir)/vapi --basedir $(top_srcdir) --pkg gio-2.0  $^
+	touch $@
+
+test_commit_store_CFLAGS=@WIZBIT_CFLAGS@
+test_commit_store_LDADD=../wizbit/libwizbit.la
+
 EXTRA_DIST += \
 	$(BUILT_SOURCES)				\
 	$(test_everything_VALASOURCES)			\
 	$(test_sync_VALASOURCES)			\
+	$(test_commit_store_VALASOURCE)			\
 	$(NULL)
