Getting things building together... This is gonna be fun... now where the hell has my Gtk,Cairo and Glib gone?!

--- a/wizbit/Makefile.am
+++ b/wizbit/Makefile.am
@@ -21,6 +21,7 @@ libwizbit_la_VALASOURCES = \
 	utils.vala \
 	breadthfirst.vala \
 	sync.vala \
+	timeline.vala
 	$(NULL)
 
 libwizbit_la_SOURCES = \
