--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -25,7 +25,7 @@ test_everything_SOURCES = \
 	$(NULL)
 
 test_everything.vala.stamp: $(test_everything_VALASOURCES)
-	$(VALAC) -C --basedir $(top_srcdir) --pkg gio-2.0 $^
+	$(VALAC) -C --basedir $(top_srcdir) --pkg gio-2.0 --pkg gtk+-2.0 $^
 	touch $@
 
 test_everything_CFLAGS=@WIZBIT_CFLAGS@
@@ -42,7 +42,7 @@ test_sync_SOURCES = \
 	$(NULL)
 
 test-sync.vala.stamp: $(test_sync_VALASOURCES)
-	$(VALAC) -C --vapidir=$(top_srcdir)/vapi --basedir $(top_srcdir) --pkg gio-2.0  $^
+	$(VALAC) -C --vapidir=$(top_srcdir)/vapi --basedir $(top_srcdir) --pkg gio-2.0 --pkg gtk+-2.0  $^
 	touch $@
 
 test_sync_CFLAGS=@WIZBIT_CFLAGS@
@@ -59,7 +59,7 @@ test_commit_store_SOURCES = \
 	$(NULL)
 
 test-commit-store.vala.stamp:	$(test_commit_store_VALASOURCES)
-	$(VALAC) -C --vapidir=$(top_srcdir)/vapi --basedir $(top_srcdir) --pkg gio-2.0  $^
+	$(VALAC) -C --vapidir=$(top_srcdir)/vapi --basedir $(top_srcdir) --pkg gio-2.0 --pkg gtk+-2.0  $^
 	touch $@
 
 test_commit_store_CFLAGS=@WIZBIT_CFLAGS@
