Added widget test

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,7 +4,7 @@ INCLUDES = \
 	-I$(top_srcdir) \
 	-DTESTDATADIR=\"$(srcdir)/data/\"
 
-TEST_PROGS += test-everything test-sync test-commit-store
+TEST_PROGS += test-everything test-sync test-commit-store test-widget
 
 noinst_PROGRAMS = $(TEST_PROGS)
 
@@ -12,6 +12,7 @@ BUILT_SOURCES = \
 	test_everything.vala.stamp			\
 	test-sync.vala.stamp				\
 	test-commit-store.vala.stamp			\
+	test-widget.vala.stamp				\
 	$(NULL)
 
 test_everything_VALASOURCES = \
@@ -65,9 +66,27 @@ test-commit-store.vala.stamp:	$(test_commit_store_VALASOURCES)
 test_commit_store_CFLAGS=@WIZBIT_CFLAGS@
 test_commit_store_LDADD=../wizbit/libwizbit.la
 
+test_widget_VALASOURCES = \
+	$(top_builddir)/wizbit/wizbit.vapi		\
+	test-widget.vala				\
+	$(NULL)
+
+test_widget_SOURCES = \
+	$(test_widget_VALASOURCES:.vala=.c)	\
+	$(test_widget_VALASOURCES:.vala=.h)	\
+	$(NULL)
+
+test-widget.vala.stamp:	$(test_widget_VALASOURCES)
+	$(VALAC) -C --vapidir=$(top_srcdir)/vapi --basedir $(top_srcdir) --pkg gio-2.0 --pkg gtk+-2.0  $^
+	touch $@
+
+test_widget_CFLAGS=@WIZBIT_CFLAGS@
+test_widget_LDADD=../wizbit/libwizbit.la
+
 EXTRA_DIST += \
 	$(BUILT_SOURCES)				\
 	$(test_everything_VALASOURCES)			\
 	$(test_sync_VALASOURCES)			\
 	$(test_commit_store_VALASOURCE)			\
+	$(test_widget_VALASOURCE)			\
 	$(NULL)
