Fixed building and put the timeline in it's own namespace

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -82,7 +82,7 @@ test-widget.vala.stamp:	$(test_widget_VALASOURCES)
 	touch $@
 
 test_widget_CFLAGS=@WIZBIT_CFLAGS@
-test_widget_LDADD=../wizbit-widgets/libwizbit-widgets.la
+test_widget_LDADD=../wizbit-widgets/libwizbit-widgets.la ../wizbit/libwizbit.la
 
 EXTRA_DIST += \
 	$(BUILT_SOURCES)				\
