Move Commit to its own file. It doesnt need to be a GObject, either.

--- a/wizbit/Makefile.am
+++ b/wizbit/Makefile.am
@@ -11,6 +11,7 @@ BUILT_SOURCES = libwizbit.vala.stamp
 
 libwizbit_la_VALASOURCES = \
 	blob_store.vala \
+	commit.vala \
 	commit_store.vala \
 	store.vala \
 	bit.vala \
