--- a/wizbit.pc.in
+++ b/wizbit.pc.in
@@ -7,10 +7,4 @@ Name: wizbit
 Description: Wizbit
 Version: @VERSION@
 Libs: -L${libdir} -lwizbit
-Cflags: -I${includedir}/wizbit-1.0/
-
-Name: wizbit-widgets
-Description: Widgets for viewing Wiz->bit's
-Version: @VERSION@
-Libs: -L${libdir} -lwizbit-widgets
-Cflags: -I${includedir}/wizbit-1.0/widgets/
+Cflags: -I${includedir}/wizbit-1.0/wizbit
