Allow wizbit to refer to config.h #defines

--- a/wizbit/Makefile.am
+++ b/wizbit/Makefile.am
@@ -10,6 +10,7 @@ INCLUDES= \
 BUILT_SOURCES = libwizbit.vala.stamp
 
 libwizbit_la_VALASOURCES = \
+	config.vapi \
 	blob_store.vala \
 	commit.vala \
 	commit_store.vala \
