--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,9 +2,9 @@ include $(top_srcdir)/Makefile.decl
 
 INCLUDES = \
 	-I$(top_srcdir) \
-	-DTESTDATADIR=\"$(srcdir)/data/\"
+	-DTESTDATADIR=\"$(top_srcdir)/tests/data/\"
 
-TEST_PROGS += test-everything test-sync test-commit-store test-widget
+TEST_PROGS += test-everything test-sync test-commit-store test-blob-store test-widget
 
 COMMON_VALASOURCES = \
 	$(top_builddir)/wizbit/wizbit.vapi		\
@@ -19,6 +19,7 @@ BUILT_SOURCES = \
 	test_everything.vala.stamp			\
 	test-sync.vala.stamp				\
 	test-commit-store.vala.stamp			\
+	test-blob-store.vala.stamp			\
 	test-widget.vala.stamp				\
 	$(NULL)
 
@@ -73,6 +74,23 @@ test-commit-store.vala.stamp:	$(test_commit_store_VALASOURCES)
 test_commit_store_CFLAGS=@WIZBIT_CFLAGS@
 test_commit_store_LDADD=../wizbit/libwizbit.la
 
+test_blob_store_VALASOURCES = \
+	$(COMMON_VALASOURCES)				\
+	test-blob-store.vala				\
+	$(NULL)
+
+test_blob_store_SOURCES = \
+	$(test_blob_store_VALASOURCES:.vala=.c)	\
+	$(test_blob_store_VALASOURCES:.vala=.h)	\
+	$(NULL)
+
+test-blob-store.vala.stamp:	$(test_blob_store_VALASOURCES)
+	$(VALAC) -C --basedir $(top_srcdir) --pkg gio-2.0  $^
+	touch $@
+
+test_blob_store_CFLAGS=@WIZBIT_CFLAGS@
+test_blob_store_LDADD=../wizbit/libwizbit.la
+
 test_widget_VALASOURCES = \
 	$(top_builddir)/wizbit/wizbit.vapi		\
 	$(top_builddir)/wizbit-widgets/wizbit-widgets.vapi \
@@ -96,5 +114,6 @@ EXTRA_DIST += \
 	$(test_everything_VALASOURCES)			\
 	$(test_sync_VALASOURCES)			\
 	$(test_commit_store_VALASOURCES)		\
+	$(test_blob_store_VALASOURCES)			\
 	$(test_widget_VALASOURCES)			\
 	$(NULL)
