Add a CommitBuilder for the current API

--- a/wizbit/Makefile.am
+++ b/wizbit/Makefile.am
@@ -13,6 +13,7 @@ libwizbit_la_VALASOURCES = \
 	config.vapi \
 	blob_store.vala \
 	commit.vala \
+	commit_builder.vala \
 	commit_store.vala \
 	store.vala \
 	bit.vala \
