Add file object from Karls branch

--- a/wizbit/Makefile.am
+++ b/wizbit/Makefile.am
@@ -17,6 +17,7 @@ libwizbit_la_VALASOURCES = \
 	commit_store.vala \
 	store.vala \
 	bit.vala \
+	file.vala \
 	uuid.vapi \
 	utils.vala \
 	breadthfirst.vala \
