Add a version of Karls temp function that is aware of the blob store location

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -80,6 +80,8 @@ test_commit_store_LDADD=../wizbit/libwizbit.la
 
 test_blob_store_VALASOURCES = \
 	$(top_srcdir)/wizbit/blob_store.vala		\
+	$(top_srcdir)/wizbit/uuid.vapi			\
+	$(top_srcdir)/wizbit/utils.vala			\
 	tests.vapi					\
 	config.vapi					\
 	tests.vala					\
