Build against libgee

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -33,7 +33,7 @@ test_everything_SOURCES = \
 	$(NULL)
 
 test_everything.vala.stamp: $(test_everything_VALASOURCES)
-	$(VALAC) -C --basedir $(top_srcdir) --pkg gio-2.0 $^
+	$(VALAC) -C --basedir $(top_srcdir) --pkg gee-1.0 --pkg gio-2.0 $^
 	touch $@
 
 test_everything_CFLAGS=@WIZBIT_CFLAGS@
@@ -50,7 +50,7 @@ test_sync_SOURCES = \
 	$(NULL)
 
 test-sync.vala.stamp: $(test_sync_VALASOURCES)
-	$(VALAC) -C --basedir $(top_srcdir) --pkg gio-2.0  $^
+	$(VALAC) -C --basedir $(top_srcdir) --pkg gee-1.0 --pkg gio-2.0  $^
 	touch $@
 
 test_sync_CFLAGS=@WIZBIT_CFLAGS@
@@ -70,7 +70,7 @@ test_commit_store_SOURCES = \
 	$(NULL)
 
 test-commit-store.vala.stamp:	$(test_commit_store_VALASOURCES)
-	$(VALAC) -C --basedir $(top_srcdir) --pkg sqlite3  $^
+	$(VALAC) -C --basedir $(top_srcdir) --pkg gee-1.0 --pkg sqlite3  $^
 	touch $@
 
 test_commit_store_CFLAGS=@WIZBIT_CFLAGS@
@@ -91,7 +91,7 @@ test_blob_store_SOURCES = \
 	$(NULL)
 
 test-blob-store.vala.stamp:	$(test_blob_store_VALASOURCES)
-	$(VALAC) -C --basedir $(top_srcdir) --pkg gio-2.0  $^
+	$(VALAC) -C --basedir $(top_srcdir) --pkg gee-1.0 --pkg gio-2.0  $^
 	touch $@
 
 test_blob_store_CFLAGS=@WIZBIT_CFLAGS@
@@ -109,7 +109,7 @@ test_widget_SOURCES = \
 	$(NULL)
 
 test-widget.vala.stamp:	$(test_widget_VALASOURCES)
-	$(VALAC) -C --basedir $(top_srcdir) --pkg gio-2.0 --pkg gtk+-2.0  $^
+	$(VALAC) -C --basedir $(top_srcdir) --pkg gee-1.0 --pkg gio-2.0 --pkg gtk+-2.0  $^
 	touch $@
 
 test_widget_CFLAGS=@WIZBIT_CFLAGS@
