--- a/wizbit/Makefile.am
+++ b/wizbit/Makefile.am
@@ -31,7 +31,7 @@ libwizbit_la_SOURCES = \
 	$(NULL)
 
 libwizbit.vala.stamp: $(libwizbit_la_VALASOURCES)
-	$(VALAC) -C --basedir $(top_srcdir) --pkg glib-2.0 --pkg gio-2.0 --pkg gio-unix-2.0 --pkg sqlite3 --pkg gee-1.0 --library wizbit $^
+	$(VALAC) -C --basedir $(top_srcdir) --pkg posix --pkg glib-2.0 --pkg gio-2.0 --pkg gio-unix-2.0 --pkg sqlite3 --pkg gee-1.0 --library wizbit $^
 	touch $@
 
 libwizbit_la_CFLAGS=@WIZBIT_CFLAGS@
