--- a/configure.ac
+++ b/configure.ac
@@ -21,7 +21,7 @@ AC_SUBST(LDFLAGS)
 
 GLIB_REQUIRED=2.12.0
 
-PKG_CHECK_MODULES(WIZBIT, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED gio-2.0 >= $GLIB_REQUIRED gio-unix-2.0 >= $GLIB_REQUIRED gee-1.0 uuid >= 1.40 sqlite3 gtk+-2.0)
+PKG_CHECK_MODULES(WIZBIT, glib-2.0 >= $GLIB_REQUIRED gobject-2.0 >= $GLIB_REQUIRED gio-2.0 >= $GLIB_REQUIRED gio-unix-2.0 >= $GLIB_REQUIRED gee-1.0 >= 0.5.0 uuid >= 1.40 sqlite3 gtk+-2.0)
 AC_SUBST(WIZBIT_CFLAGS)
 AC_SUBST(WIZBIT_LIBS)
 
